--- a/.github/workflows/activation.yml
+++ b/.github/workflows/activation.yml
@@ -8,7 +8,7 @@ jobs:
       # Request manual activation file
       - name: Request manual activation file 🔑
         id: getManualLicenseFile
-        uses: game-ci/unity-request-activation-file@v2
+        uses: game-ci/unity-activate@v2.0.0
       # Upload artifact (Unity_v2021.3.16f1.alf)
       - name: Expose as artifact 📦
         uses: actions/upload-artifact@v3
