--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -86,7 +86,7 @@ jobs:
           git reset --hard
           sudo git clean -d -x -f
           rm -r *
-          git add *
+          git add .
           git commit -m "cleaning branch"
           git push
       - name: Applying stashed files to ${{ vars.DEPLOYMENT_BRANCH }}
