Update GitHub Actions workflow to use 'git add .' for consistent file staging

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -108,7 +108,7 @@ jobs:
         run: |
           pwd
           git status
-          git add *
+          git add .
           git commit -m "Deployment"
           git push
           git reset --hard
